bug: home page items not showing and profile items are no wrappin properly

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,6 +2,7 @@
   background-color: rgba(243, 243, 243, 1);
   font-family: "CabinetGrotesk-Bold";
   font-weight: 700;
+  width: 1440px;
 }
 
 .page__content {
