--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -19,7 +19,7 @@
 .header {
   display: flex;
   align-items: center;
-  padding: 32px 0 28px;
+  padding: 47px 0 28px;
   position: relative;
 }
 
